--- a/skeleton/package.json
+++ b/skeleton/package.json
@@ -11,7 +11,6 @@
   "prisma": {
     "seed": "node ./prisma/seed.js"
   },
-  "type": "module",
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "eslint": "8.37.0",
@@ -24,6 +23,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.1"
   }
 }
