--- a/skeleton/package.json
+++ b/skeleton/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.13.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "webpocket": "^1.0.1"
   }
 }
