--- a/skeleton/package.json
+++ b/skeleton/package.json
@@ -18,10 +18,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^4.12.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "tailwind": "^4.0.0"
   },
