--- a/skeleton/package.json
+++ b/skeleton/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^4.12.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
